--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -13,7 +13,6 @@
   @media (hover: hover) {
     @nest & a:hover {
       color: var(--color-text);
-      background: var(--color-foreground);
     }
   }
 }
